add backreference to rule_file

--- a/snort.conf
+++ b/snort.conf
@@ -225,8 +225,8 @@ config event_queue: max_queue 8 log 5 order_events content_length
 # For more information see README.PerfProfiling
 ###################################################
 
-config profile_rules: print 10, sort nomatches
-config profile_preprocs: print 10, sort total_ticks
+config profile_rules: print 10, sort total_ticks
+#config profile_preprocs: print 10, sort total_ticks
 
 ###################################################
 # Configure protocol aware flushing
