--- a/snort_macos.conf
+++ b/snort_macos.conf
@@ -63,7 +63,7 @@ config checksum_mode: none
 # Configure maximum number of flowbit references.  For more information, see README.flowbits
 # config flowbits_size: 64
 
-# Configure ports to ignore 
+# Configure ports to ignore
 # config ignore_ports: tcp 21 6667:6671 1356
 # config ignore_ports: udp 1:17 53
 
@@ -155,7 +155,7 @@ config profile_rules: print 10, sort total_ticks
 config paf_max: 16000
 
 ###################################################
-# Step #4: Configure dynamic loaded libraries.  
+# Step #4: Configure dynamic loaded libraries.
 # For more information, see Snort Manual, Configuring Snort - Dynamic Modules
 ###################################################
 
@@ -188,7 +188,7 @@ preprocessor frag3_global: max_frags 65536
 preprocessor frag3_engine: policy windows detect_anomalies overlap_limit 10 min_fragment_length 100 timeout 180
 preprocessor stream5_global: track_tcp yes, \
    track_udp yes, \
-   track_icmp no, \ 
+   track_icmp no, \
    max_tcp 262144, \
    max_udp 131072, \
    max_active_responses 2, \
@@ -239,7 +239,7 @@ preprocessor http_inspect_server: server default \
     multi_slash no \
     utf_8 no \
     u_encode yes \
-    webroot no 
+    webroot no
 
 # ONC-RPC normalization and anomaly detection.  For more information, see the Snort Manual, Configuring Snort - Preprocessors - RPC Decode
 preprocessor rpc_decode: 111 32770 32771 32772 32773 32774 32775 32776 32777 32778 32779 no_alert_multiple_requests no_alert_large_fragments no_alert_incomplete
@@ -279,16 +279,16 @@ preprocessor ftp_telnet_protocol: ftp server default \
     chk_str_fmt { MLSD MLST MODE NLST OPTS PASS PBSZ PORT } \
     chk_str_fmt { PROT REST RETR RMD RNFR RNTO SDUP SITE } \
     chk_str_fmt { SIZE SMNT STAT STOR STRU TEST TYPE USER } \
-    chk_str_fmt { XCRC XCWD XMAS XMD5 XMKD XRCP XRMD XRSQ } \ 
+    chk_str_fmt { XCRC XCWD XMAS XMD5 XMKD XRCP XRMD XRSQ } \
     chk_str_fmt { XSEM XSEN XSHA1 XSHA256 } \
-    cmd_validity ALLO < int [ char R int ] > \    
+    cmd_validity ALLO < int [ char R int ] > \
     cmd_validity EPSV < [ { char 12 | char A char L char L } ] > \
     cmd_validity MACB < string > \
     cmd_validity MDTM < [ date nnnnnnnnnnnnnn[.n[n[n]]] ] string > \
     cmd_validity MODE < char ASBCZ > \
     cmd_validity PORT < host_port > \
     cmd_validity PROT < char CSEP > \
-    cmd_validity STRU < char FRPO [ string ] > \    
+    cmd_validity STRU < char FRPO [ string ] > \
     cmd_validity TYPE < { char AE [ char NTC ] | char I | char L [ number ] } >
 preprocessor ftp_telnet_protocol: ftp client default \
     max_resp_len 256 \
@@ -321,7 +321,7 @@ preprocessor smtp: ports { 25 465 587 691 } \
     alt_max_command_line_len 500 { HELP HELO ETRN EHLO } \
     alt_max_command_line_len 255 { EXPN VRFY ATRN SIZE BDAT DEBUG EMAL ESAM ESND ESOM EVFY IDENT NOOP RSET } \
     alt_max_command_line_len 246 { SEND SAML SOML AUTH TURN ETRN DATA RSET QUIT ONEX QUEU STARTTLS TICK TIME TURNME VERB X-EXPS X-LINK2STATE XADR XAUTH XCIR XEXCH50 XGEN XLICENSE XQUE XSTA XTRN XUSR } \
-    valid_cmds { ATRN AUTH BDAT CHUNKING DATA DEBUG EHLO EMAL ESAM ESND ESOM ETRN EVFY } \ 
+    valid_cmds { ATRN AUTH BDAT CHUNKING DATA DEBUG EHLO EMAL ESAM ESND ESOM ETRN EVFY } \
     valid_cmds { EXPN HELO HELP IDENT MAIL NOOP ONEX QUEU QUIT RCPT RSET SAML SEND SOML } \
     valid_cmds { STARTTLS TICK TIME TURN TURNME VERB VRFY X-ADAT X-DRCP X-ERCP X-EXCH50 } \
     valid_cmds { X-EXPS X-LINK2STATE XADR XAUTH XCIR XEXCH50 XGEN XLICENSE XQUE XSTA XTRN XUSR } \
@@ -390,7 +390,7 @@ preprocessor sensitive_data: alert_threshold 25
    #max_to_len 256, \
    #max_via_len 1024, \
    #max_contact_len 512, \
-   #max_content_len 2048 
+   #max_content_len 2048
 #
 # IMAP preprocessor.  For more information see README.imap
 #preprocessor imap: \
@@ -422,20 +422,20 @@ preprocessor reputation: \
    priority whitelist, \
    nested_ip inner, \
    whitelist $WHITE_LIST_PATH/white_list.rules, \
-   blacklist $BLACK_LIST_PATH/black_list.rules 
+   blacklist $BLACK_LIST_PATH/black_list.rules
 
 ###################################################
 # Step #6: Configure output plugins
 # For more information, see Snort Manual, Configuring Snort - Output Modules
 ###################################################
 
-# unified2 
+# unified2
 # Recommended for most installs
 # output unified2: filename merged.log, limit 128, nostamp, mpls_event_types, vlan_event_types
 
 # Additional configuration for specific types of installs
 output alert_unified2: filename snort.alert, limit 128, nostamp
-output log_unified2: filename snort.log, limit 128, nostamp 
+output log_unified2: filename snort.log, limit 128, nostamp
 
 # syslog
 output alert_syslog: LOG_AUTH LOG_ALERT
@@ -456,7 +456,7 @@ include /usr/local/etc/snort/reference.config
 ###################################################
 
 # site specific rules
-include $RULE_PATH/local.rules
+include local.rules
 
 include $RULE_PATH/app-detect.rules
 include $RULE_PATH/attack-responses.rules
@@ -606,5 +606,5 @@ include $SO_RULE_PATH/server-mail.rules
 include $SO_RULE_PATH/server-mysql.rules
 #include $SO_RULE_PATH/server-other.rules
 include $SO_RULE_PATH/server-webapp.rules
-# Event thresholding or suppression commands. See threshold.conf 
+# Event thresholding or suppression commands. See threshold.conf
 include /usr/local/etc/snort/threshold.conf
