reorg; vendoring upstream

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,17 @@
 /pcap/
 /extracts/
 /logs/
+/tmp/
 **/*.swp
+/.bundle/
+/.yardoc
+/Gemfile.lock
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
+
+# rspec failure tracking
+.rspec_status
