--- a/conf/engine_detection.conf
+++ b/conf/engine_detection.conf
@@ -4,22 +4,14 @@ config pcre_match_limit_recursion: 1500
 config detection: search-method ac-split search-optimize max-pattern-len 20
 config event_queue: max_queue 8 log 5 order_events content_length
 
-###################################################
-# Per Packet latency configuration
-#config ppm: max-pkt-time 250, \
-#   fastpath-expensive-packets, \
-#   pkt-log
+# protocol aware flushing
+config paf_max: 16000
 
-# Per Rule latency configuration
-#config ppm: max-rule-time 200, \
-#   threshold 3, \
-#   suspend-expensive-rules, \
-#   suspend-timeout 20, \
+# per-packet latency 
+#config ppm: max-pkt-time 250, fastpath-expensive-packets, pkt-log
+
+# per rule latency:
+#config ppm: max-rule-time 200, threshold 3, \
+#   suspend-expensive-rules, suspend-timeout 20, \
 #   rule-log alert
 
-
-###################################################
-# Configure protocol aware flushing
-# For more information see README.stream5
-###################################################
-config paf_max: 16000
