update macos config; some unit tests

--- a/conf/engine_preproc.conf
+++ b/conf/engine_preproc.conf
@@ -5,7 +5,7 @@ preprocessor frag3_engine: policy windows detect_anomalies overlap_limit 10 min_
 # Target-Based stateful inspection/stream reassembly.  For more inforation, see README.stream5
 preprocessor stream5_global: track_tcp yes, \
    track_udp yes, \
-   track_icmp no, \ 
+   track_icmp no, \
    max_tcp 262144, \
    max_udp 131072, \
    max_active_responses 0, \
@@ -52,9 +52,9 @@ preprocessor http_inspect_server: server default \
     multi_slash no \
     utf_8 no \
     u_encode yes \
-    webroot no \
-    decompress_swf { deflate lzma } \
-    decompress_pdf { deflate }
+    webroot no 
+#   decompress_swf { deflate lzma } \
+#   decompress_pdf { deflate }
 
 # ONC-RPC normalization and anomaly detection.  For more information, see the Snort Manual, Configuring Snort - Preprocessors - RPC Decode
 preprocessor rpc_decode: 111 32770 32771 32772 32773 32774 32775 32776 32777 32778 32779 no_alert_multiple_requests no_alert_large_fragments no_alert_incomplete
@@ -91,16 +91,16 @@ preprocessor ftp_telnet_protocol: ftp server default \
     chk_str_fmt { MLSD MLST MODE NLST OPTS PASS PBSZ PORT } \
     chk_str_fmt { PROT REST RETR RMD RNFR RNTO SDUP SITE } \
     chk_str_fmt { SIZE SMNT STAT STOR STRU TEST TYPE USER } \
-    chk_str_fmt { XCRC XCWD XMAS XMD5 XMKD XRCP XRMD XRSQ } \ 
+    chk_str_fmt { XCRC XCWD XMAS XMD5 XMKD XRCP XRMD XRSQ } \
     chk_str_fmt { XSEM XSEN XSHA1 XSHA256 } \
-    cmd_validity ALLO < int [ char R int ] > \    
+    cmd_validity ALLO < int [ char R int ] > \
     cmd_validity EPSV < [ { char 12 | char A char L char L } ] > \
     cmd_validity MACB < string > \
     cmd_validity MDTM < [ date nnnnnnnnnnnnnn[.n[n[n]]] ] string > \
     cmd_validity MODE < char ASBCZ > \
     cmd_validity PORT < host_port > \
     cmd_validity PROT < char CSEP > \
-    cmd_validity STRU < char FRPO [ string ] > \    
+    cmd_validity STRU < char FRPO [ string ] > \
     cmd_validity TYPE < { char AE [ char NTC ] | char I | char L [ number ] } >
 preprocessor ftp_telnet_protocol: ftp client default \
     max_resp_len 256 \
@@ -133,7 +133,7 @@ preprocessor smtp: ports { 25 465 587 691 } \
     alt_max_command_line_len 500 { HELP HELO ETRN EHLO } \
     alt_max_command_line_len 255 { EXPN VRFY ATRN SIZE BDAT DEBUG EMAL ESAM ESND ESOM EVFY IDENT NOOP RSET } \
     alt_max_command_line_len 246 { SEND SAML SOML AUTH TURN ETRN DATA RSET QUIT ONEX QUEU STARTTLS TICK TIME TURNME VERB X-EXPS X-LINK2STATE XADR XAUTH XCIR XEXCH50 XGEN XLICENSE XQUE XSTA XTRN XUSR } \
-    valid_cmds { ATRN AUTH BDAT CHUNKING DATA DEBUG EHLO EMAL ESAM ESND ESOM ETRN EVFY } \ 
+    valid_cmds { ATRN AUTH BDAT CHUNKING DATA DEBUG EHLO EMAL ESAM ESND ESOM ETRN EVFY } \
     valid_cmds { EXPN HELO HELP IDENT MAIL NOOP ONEX QUEU QUIT RCPT RSET SAML SEND SOML } \
     valid_cmds { STARTTLS TICK TIME TURN TURNME VERB VRFY X-ADAT X-DRCP X-ERCP X-EXCH50 } \
     valid_cmds { X-EXPS X-LINK2STATE XADR XAUTH XCIR XEXCH50 XGEN XLICENSE XQUE XSTA XTRN XUSR } \
@@ -170,5 +170,4 @@ preprocessor reputation: \
    priority whitelist, \
    nested_ip inner, \
    whitelist $WHITE_LIST_PATH/white_list.rules, \
-   blacklist $BLACK_LIST_PATH/black_list.rules 
-
+   blacklist $BLACK_LIST_PATH/black_list.rules
