--- a/conf/output.conf
+++ b/conf/output.conf
@@ -1,4 +1,4 @@
-config logdir: ../log
+config logdir: log
 output alert_csv: stdout timestamp,sig_generator,sig_id,sig_rev,proto,src,srcport,dst,dstport,msg
 output log_null
 #config profile_rules: print 10, sort total_ticks
