conf generation fixes

--- a/conf/output.conf
+++ b/conf/output.conf
@@ -1,6 +1,6 @@
 config logdir: log
 output alert_csv: stdout timestamp,sig_generator,sig_id,sig_rev,proto,src,srcport,dst,dstport,msg
 output log_null
-config profile_rules: print 10, sort total_ticks
-config profile_preprocs: print 10, sort total_ticks
+#config profile_rules: print 10, sort total_ticks
+#config profile_preprocs: print 10, sort total_ticks
 #preprocessor perfmonitor: time 300 file snort.stats pktcnt 10000
